added new brand moskvich

--- a/pages/centers/south/index.html
+++ b/pages/centers/south/index.html
@@ -6,12 +6,39 @@ sub: true
 ---
 							<h1>Автоцентры на Южном шоссе</h1>
 
+							<h3>Автоцентр Москвич</h3>
+
+							<div class="flex flex-wrap items-start mb-5">
+								<!-- <img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
+								<p class="w-full lg:w-auto">
+									<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12, строение 2<br>
+									<b>Телефон: </b><a href="tel:+78469936600">+7&nbsp;(846) 993-66-00</a><br>
+									<b>e-mail:</b><span> </span><a href="mailto:2047sales@sam-auto.ru"><font color="blue">2047sales@sam-auto.ru</font></a>, 
+									<a href="mailto:2047afs@sam-auto.ru">
+									<font color="blue">2047afs@sam-auto.ru</font>
+									</a><br>
+									<b>Сайт: </b><a href="https://moskvich-samara.ru" target="_blank">
+									<font color="blue">moskvich-samara.ru</font>
+									</a><b> </b><br>
+									<b>Часы работы:</b> <br>
+									Пн-Пт: 8:30 — 20:00 &nbsp;<br>
+									Сб-Вс: 8:30 — 18:00 <br>
+									<a
+										href="#"
+										target="_blank"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'мосвиич'; $store.state.isModalOpen = true;"
+									>
+									<font color="blue">Записаться на тест-драйв »</font>
+									</a>
+								</p>
+							</div>
+
 							<h3>Автоцентр Nissan</h3>
 
 							<div class="flex flex-wrap items-start mb-5">
 								<img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center">
 								<p class="w-full lg:w-auto">
-									<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12<br>
+									<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12А, строение 1<br>
 									<b>Телефон: </b><a href="tel:+78469936600">+7&nbsp;(846) 993-66-00</a><br>
 									<b>e-mail:</b><span> </span><a href="mailto:sales@nissan.samara-ug.ru"><font color="blue">sales@nissan.samara-ug.ru</font></a>, <a href="mailto:aftersales@nissan.samara-ug.ru">
 									<font color="blue">aftersales@nissan.samara-ug.ru</font>
@@ -20,8 +47,8 @@ sub: true
 									<font color="blue">www.nissansamara.ru</font>
 									</a><b> </b><br>
 									<b>Часы работы:</b> <br>
-									Пн-Сб: 9:00 — 20:00 &nbsp;<br>
-									Вс: 9:00 — 18:00 (без перерывов и выходных) <br>
+									Пн-Пт: 8:30 — 20:00 &nbsp;<br>
+									Сб-Вс: 8:30 — 18:00 <br>
 									<a
 										href="#"
 										target="_blank"
