--- a/pages/carrepair/index.html
+++ b/pages/carrepair/index.html
@@ -21,5 +21,5 @@ permalink: '/carrepair/'
 						<img src="{{ 'img/pages/carrepair/3.jpg' | relative_url }}" alt="ALT" class="max-w-full mb-5">
 
 						<p><b>Кузовной цех находится по адресу: Южное шоссе 12 (автосалон Nissan)</b></p>
-						<p><b>Режим работы: <br>Пн-Сб: 9:00 — 20:00 <br>Вс: 9:00 — 18:00 (без перерывов и выходных)</b></p>
+						<p><b>Режим работы: <br>Пн-Пт: 8:30 — 20:00 <br>Сб-Вс: 8:30 — 18:00 (без перерывов и выходных)</b></p>
 						<p><b>Подробности  по тел.&nbsp;<a href="tel:+78469936600">+7(846)993-66-00</a></b></p>
