--- a/pages/centers/infiniti/index.html
+++ b/pages/centers/infiniti/index.html
@@ -9,7 +9,7 @@ sub: true
 							<div class="flex flex-wrap items-start mb-5">
 								<img src="{{ 'img/pages/centers/ac_r1_infiniti.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center">
 								<p>
-									<b>Адрес:</b> 443125, г. Самара, Южное шоссе, 12А, стр. 2.<br>
+									<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1<br>
 									<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
 									<b>e-mail:&nbsp;</b><a href="mailto:ds@infinitisamara.ru"><font color="blue">ds@infinitisamara.ru</font></a>, <a href="mailto:service@infinitysamara.ru"><font color="blue">service@infinitisamara.ru</font></a><br>
 									<b>Сайт: </b><a href="http://www.infinitisamara.ru" target="_blank"><font color="blue">www.infinitisamara.ru</font></a><b> </b><br>
