join south page, hide images

--- a/pages/cars/infiniti/index.html
+++ b/pages/cars/infiniti/index.html
@@ -5,7 +5,7 @@ permalink: '/cars/infiniti/'
 ---
 							<h1>Infiniti</h1>
 
-							<img src="{{ 'img/banners/ac_m_infiniti.jpg' | relative_url }}" alt="Автомобили Infiniti в Самаре" class="mb-5 object-cover object-center">
+							<!-- <img src="{{ 'img/banners/ac_m_infiniti.jpg' | relative_url }}" alt="Автомобили Infiniti в Самаре" class="mb-5 object-cover object-center"> -->
 							<p>
 								<b>Адрес:</b> 443125, г. Самара, Южное шоссе, 12А, стр. 2.<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
