--- a/pages/cars/moskvich/index.html
+++ b/pages/cars/moskvich/index.html
@@ -5,7 +5,7 @@ permalink: '/cars/moskvich/'
 ---
 							<h1>Москвич</h1>
 
-							<img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Москвич в Самаре" class="mb-5 object-cover object-center">
+							<!-- <img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Москвич в Самаре" class="mb-5 object-cover object-center"> -->
 							<p>
 								<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2.<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
