--- a/pages/centers/aurora/index.html
+++ b/pages/centers/aurora/index.html
@@ -69,3 +69,8 @@ sub: true
 								<li>установка аудио-видео аппаратуры</li>
 								<li>противоугонные системы, тонировка</li>
 							</ul>
+
+							<h3>Схема проезда: </h3>
+							<div class="mb-5">
+								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adccd4da5f33a73c442b191df90e527c31677bb91699a53c6cd985e252b63b294&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
+							</div>
