--- a/pages/centers/south/index.html
+++ b/pages/centers/south/index.html
@@ -33,6 +33,42 @@ sub: true
 								</p>
 							</div>
 
+							<h3>Автоцентр Infiniti на Южном шоссе</h3>
+
+							<div class="flex flex-wrap items-start mb-5">
+								<!-- <img src="{{ 'img/pages/centers/ac_r1_infiniti.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
+								<p>
+									<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1<br>
+									<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
+									<b>e-mail:&nbsp;</b><a href="mailto:ds@infinitisamara.ru"><font color="blue">ds@infinitisamara.ru</font></a>, <a href="mailto:service@infinitysamara.ru"><font color="blue">service@infinitisamara.ru</font></a><br>
+									<b>Сайт: </b><a href="http://www.infinitisamara.ru" target="_blank"><font color="blue">www.infinitisamara.ru</font></a><b> </b><br>
+									<b>Часы работы: </b><br>Пн-Сб: 8:30 — 20:00 &nbsp;<br>
+									Вс: 8:30 — 18:00 (без перерывов и выходных) <br>
+									<a
+										href="#"
+										target="_blank"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;"
+									>
+									<font color="blue">Записаться на тест-драйв »</font>
+									</a>
+								</p>
+							</div>
+
+							<h3>Автоцентр Infiniti в Самаре предлагает весь спектр услуг по приобретению и обслуживанию автомобилей марки Infiniti:</h3>
+							
+							<ul>
+								<li>продажа автомобилей</li>
+								<li>кредит</li>
+								<li>лизинг</li>
+								<li>страхование</li>
+								<li>тест-драйв</li>
+								<li>автомобили с пробегом (возможен кредит)</li>
+								<li>trade-in (новый автомобиль = ваш автомобиль + доплата)</li>
+								<li>сервис и запасные части</li>
+								<li>кузовной ремонт любой сложности</li>
+								<li>дополнительное оборудование и аксессуары</li>
+							</ul>
+
 							<h3>Автоцентр Nissan</h3>
 
 							<div class="flex flex-wrap items-start mb-5">
@@ -57,4 +93,9 @@ sub: true
 									<font color="blue">Записаться на тест-драйв »</font>
 									</a>
 								</p>
+							</div>
+
+							<h3>Схема проезда: </h3>
+							<div class="mb-5">
+								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abcc417e84cb6ccd3b8916ddef366adc653407c58afa4aaf101f736f18d02d542&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 							</div>
