--- a/pages/cars/infiniti/index.html
+++ b/pages/cars/infiniti/index.html
@@ -3,23 +3,24 @@ title: "Автомобили Infiniti в Самаре | Продажа авто 
 layout: default
 permalink: '/cars/infiniti/'
 ---
-							<h1>Infiniti</h1>
+							<h1>Автомобили Infiniti на Южном шоссе</h1>
 
 							<!-- <img src="{{ 'img/banners/ac_m_infiniti.jpg' | relative_url }}" alt="Автомобили Infiniti в Самаре" class="mb-5 object-cover object-center"> -->
 							<p>
-								<b>Адрес:</b> 443125, г. Самара, Южное шоссе, 12А, стр. 2.<br>
+								<b>Адрес:</b> 443085, Самара, Южное шоссе, 12А, строение 1, напротив ТК «Амбар»<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
 								<b>e-mail:&nbsp;</b><a href="mailto:ds@infinitisamara.ru"><font color="blue">ds@infinitisamara.ru</font></a>, <a href="mailto:service@infinitysamara.ru"><font color="blue">service@infinitisamara.ru</font></a><br>
 								<b>Сайт: </b><a href="http://www.infinitisamara.ru" target="_blank"><font color="blue">www.infinitisamara.ru</font></a><b> </b><br>
-								<b>Часы работы: </b><br>Пн-Сб: 8:30 — 20:00 &nbsp;<br>
-								Вс: 8:30 — 18:00 (без перерывов и выходных) <br>
-								<a
+								<b>Часы работы:</b><br>
+									Пн-Пт: 8:30 — 20:00<br>
+									Сб-Вс: 8:30 — 18:00<br>
+								<!-- <a
 									href="#"
 									target="_blank"
 									@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;"
 								>
 								<font color="blue">Записаться на тест-драйв »</font>
-								</a>
+								</a> -->
 							</p>
 
 							<h3>Схема проезда: </h3>
