--- a/pages/cars/nissan/index.html
+++ b/pages/cars/nissan/index.html
@@ -3,37 +3,24 @@ title: "Автомобили Nissan в Самаре | Продажа авто в
 layout: default
 permalink: '/cars/nissan/'
 ---
-							<h1>Nissan</h1>
+							<h1>Автомобили Nissan на Южном шоссе</h1>
 
 							<img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Nissan в Самаре" class="mb-5 object-cover object-center">
 							<p>
-								<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12, напротив ТК «Амбар»
-							</p>
-							<p>
-								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a>
-							</p>
-							<p>
-								<b>e-mail:</b><span>&nbsp;</span><a href="mailto:sales@nissan.samara-ug.ru"><font color="blue">sales@nissan.samara-ug.ru</font></a>, <a href="mailto:aftersales@nissan.samara-ug.ru"><font color="blue">aftersales@nissan.samara-ug.ru</font></a>
-							</p>
-							<p>
-								<b>Сайт: </b><a href="http://www.nissansamara.ru/" target="_blank"><font color="blue">www.nissansamara.ru</font></a><b> </b>
-							</p>
-							<p>
+								<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12А, строение 1, напротив ТК «Амбар»<br>
+								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
+								<b>e-mail:</b><span>&nbsp;</span><a href="mailto:sales@nissan.samara-ug.ru"><font color="blue">sales@nissan.samara-ug.ru</font></a>, <a href="mailto:aftersales@nissan.samara-ug.ru"><font color="blue">aftersales@nissan.samara-ug.ru</font></a><br>
+								<b>Сайт: </b><a href="http://www.nissansamara.ru/" target="_blank"><font color="blue">www.nissansamara.ru</font></a><b> </b><br>
 								<b>Часы работы:</b><br>
-								Пн-Сб: 9:00 — 20:00  (без перерывов и выходных)<br>
-								Вс: 9:00 — 18:00
-							</p>
-							<p>
-								Добавляйтесь к нам в социальных сетях:<br>
-							</p>
-							<p>
-								<a
+									Пн-Пт: 8:30 — 20:00<br>
+									Сб-Вс: 8:30 — 18:00
+								<!-- <a
 									href="#"
 									target="_blank"
 									@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;"
 								>
 									<font color="blue">Записаться на тест-драйв »</font>
-								</a>
+								</a> -->
 							</p>
 
 							<h3>Схема проезда: </h3>
