--- a/pages/centers/south/index.html
+++ b/pages/centers/south/index.html
@@ -7,7 +7,6 @@ sub: true
 							<h1>Автоцентры на Южном шоссе</h1>
 
 							<h3>Автоцентр Москвич</h3>
-
 							<div class="flex flex-wrap items-start mb-5">
 								<!-- <img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 								<p class="w-full lg:w-auto">
@@ -20,21 +19,20 @@ sub: true
 									<b>Сайт: </b><a href="https://moskvich-samara.ru" target="_blank">
 									<font color="blue">moskvich-samara.ru</font>
 									</a><b> </b><br>
-									<b>Часы работы:</b> <br>
-									Пн-Пт: 8:30 — 20:00 &nbsp;<br>
-									Сб-Вс: 8:30 — 18:00 <br>
+									<b>Часы работы:</b><br>
+									Пн-Пт: 8:30 — 20:00<br>
+									Сб-Вс: 8:30 — 18:00<br>
 									<a
 										href="#"
 										target="_blank"
-										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'мосвиич'; $store.state.isModalOpen = true;"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'moskvich'; $store.state.isModalOpen = true;"
 									>
 									<font color="blue">Записаться на тест-драйв »</font>
 									</a>
 								</p>
 							</div>
 
-							<h3>Автоцентр Infiniti на Южном шоссе</h3>
-
+							<h3>Автоцентр Infiniti</h3>
 							<div class="flex flex-wrap items-start mb-5">
 								<!-- <img src="{{ 'img/pages/centers/ac_r1_infiniti.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 								<p>
@@ -42,37 +40,22 @@ sub: true
 									<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
 									<b>e-mail:&nbsp;</b><a href="mailto:ds@infinitisamara.ru"><font color="blue">ds@infinitisamara.ru</font></a>, <a href="mailto:service@infinitysamara.ru"><font color="blue">service@infinitisamara.ru</font></a><br>
 									<b>Сайт: </b><a href="http://www.infinitisamara.ru" target="_blank"><font color="blue">www.infinitisamara.ru</font></a><b> </b><br>
-									<b>Часы работы: </b><br>Пн-Сб: 8:30 — 20:00 &nbsp;<br>
-									Вс: 8:30 — 18:00 (без перерывов и выходных) <br>
-									<a
+									<b>Часы работы:</b><br>
+									Пн-Пт: 8:30 — 20:00<br>
+									Сб-Вс: 8:30 — 18:00<br>
+									<!-- <a
 										href="#"
 										target="_blank"
 										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'infiniti'; $store.state.isModalOpen = true;"
 									>
 									<font color="blue">Записаться на тест-драйв »</font>
-									</a>
+									</a> -->
 								</p>
 							</div>
 
-							<h3>Автоцентр Infiniti в Самаре предлагает весь спектр услуг по приобретению и обслуживанию автомобилей марки Infiniti:</h3>
-							
-							<ul>
-								<li>продажа автомобилей</li>
-								<li>кредит</li>
-								<li>лизинг</li>
-								<li>страхование</li>
-								<li>тест-драйв</li>
-								<li>автомобили с пробегом (возможен кредит)</li>
-								<li>trade-in (новый автомобиль = ваш автомобиль + доплата)</li>
-								<li>сервис и запасные части</li>
-								<li>кузовной ремонт любой сложности</li>
-								<li>дополнительное оборудование и аксессуары</li>
-							</ul>
-
 							<h3>Автоцентр Nissan</h3>
-
 							<div class="flex flex-wrap items-start mb-5">
-								<img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center">
+								<!-- <img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 								<p class="w-full lg:w-auto">
 									<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12А, строение 1<br>
 									<b>Телефон: </b><a href="tel:+78469936600">+7&nbsp;(846) 993-66-00</a><br>
@@ -82,16 +65,16 @@ sub: true
 									<b>Сайт: </b><a href="http://www.nissansamara.ru/" target="_blank">
 									<font color="blue">www.nissansamara.ru</font>
 									</a><b> </b><br>
-									<b>Часы работы:</b> <br>
-									Пн-Пт: 8:30 — 20:00 &nbsp;<br>
-									Сб-Вс: 8:30 — 18:00 <br>
-									<a
+									<b>Часы работы:</b><br>
+									Пн-Пт: 8:30 — 20:00<br>
+									Сб-Вс: 8:30 — 18:00<br>
+									<!-- <a
 										href="#"
 										target="_blank"
 										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'nissan'; $store.state.isModalOpen = true;"
 									>
 									<font color="blue">Записаться на тест-драйв »</font>
-									</a>
+									</a> -->
 								</p>
 							</div>
 
