--- a/pages/cars/jaguar/index.html
+++ b/pages/cars/jaguar/index.html
@@ -3,31 +3,21 @@ title: "Автомобили Jaguar в Самаре | Продажа авто в
 layout: default
 permalink: '/cars/jaguar/'
 ---
-							<h1>Jaguar</h1>
+							<h1>Автомобили Jaguar на Авроре</h1>
 
 							<img src="{{ 'img/banners/20141129_1.jpg' | relative_url }}" alt="Автомобили Jaguar в Самаре" class="mb-5 object-cover object-center">
 							<p>
-								<b>Адрес:</b> 443045, г.Самара, ул. Авроры 150 Е
-							</p>
-							<p>
-								<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a>
-							</p>
-							<p>
-								<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a>&nbsp;
-							</p>
-							<p>
-								<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a>
-							</p>
-							<p>
+								<b>Адрес:</b> 443045, г.Самара, ул. Авроры 150 Е<br>
+								<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
+								<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
+								<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a><br>
 								<b>Часы работы:</b><br>
-								Пн-Сб: 8:30 — 20:00 &nbsp;(без перерывов и выходных) <br>
-								Вс: 8:30 — 18:00<br>
+								Ежедневно 9:00-18:00
 							</p>
 
 							<h3>Схема проезда: </h3>
 							<div class="mb-5">
 								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Adccd4da5f33a73c442b191df90e527c31677bb91699a53c6cd985e252b63b294&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-								
 							</div>
 
 							<h3>Автомобили Jaguar в Самаре</h3>
