upd spo_serv page

--- a/pages/spo_serv/index.html
+++ b/pages/spo_serv/index.html
@@ -9,21 +9,17 @@ permalink: '/spo_serv/'
 
 							<div class="flex flex-wrap items-stretch mb-5 gap-0 sm:gap-3 xl:gap-4 2xl:gap-5">
 
-								<a href="https://peugeotsamara.ru/service/sale/3524/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/spo_serv/1.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
-									<b class="sm:min-h-[48px]">Кузовные детали по себестоимости</b>
+								<a href="#" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline">
+									<img src="{{ 'img/pages/spo_serv/landrover-oil.jpeg' | relative_url }}" alt="Масляный сервис Land Rover по выгодной цене" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
+									<b class="sm:min-h-[48px]">Масляный сервис Land Rover по выгодной цене</b>
 								</a>
-								<a href="https://nissansamara.ru/owners/carcare-specials/110/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/spo_serv/2.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
-									<b class="sm:min-h-[48px]">Проверка развал-схождения в подарок!</b>
+								<a href="#" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline">
+									<img src="{{ 'img/pages/spo_serv/landrover-service.jpeg' | relative_url }}" alt="Выгодный сервис Land Rover" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
+									<b class="sm:min-h-[48px]">Выгодный сервис Land Rover</b>
 								</a>
-								<a href="https://nissansamara.ru/owners/carcare-specials/139/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/spo_serv/3.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
-									<b class="sm:min-h-[48px]">5% скидка в день рождения</b>
-								</a>
-								<a href="https://nissansamara.ru/owners/specials-programs/service-contract/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/spo_serv/4.png' | relative_url }}" alt="ALT" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
-									<b class="sm:min-h-[48px]">Сервисный контракт NISSAN</b>
+								<a href="#" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline">
+									<img src="{{ 'img/pages/spo_serv/nissan-service.jpeg' | relative_url }}" alt="Скидка 50% на услуги сервиса Nissan" class="mb-2 flex-grow xl:flex-grow-0 xl:h-[129px] xl:w-auto mx-auto">
+									<b class="sm:min-h-[48px]">Скидка 50% на услуги сервиса Nissan</b>
 								</a>
 
 							</div>
