fix jaguar land rover

--- a/pages/centers/aurora/index.html
+++ b/pages/centers/aurora/index.html
@@ -14,15 +14,15 @@ sub: true
 									<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
 									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
 									<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a><br>
-									<b>Часы работы:</b> <br>Пн-Сб: 8:30 — 20:00 &nbsp;<br>
-									Вс: 8:30 — 18:00 (без перерывов и выходных) <br>
-									<a
+									<b>Часы работы:</b><br>
+									Ежедневно: 9:00-18:00<br>
+									<!-- <a
 										href="#"
 										target="_blank"
 										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'jaguar'; $store.state.isModalOpen = true;"
 									>
 									<font color="blue">Записаться на тест-драйв »</font>
-									</a>
+									</a> -->
 								</p>
 							</div>
 
@@ -34,15 +34,15 @@ sub: true
 									<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
 									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a>&nbsp; <br>
 									<b>Сайт: </b><a href="http://www.landroversamara.ru" target="_blank"><font color="blue">www.landroversamara.ru</font></a><br>
-									<b>Часы работы:</b> <br>Пн-Сб: 8:30 — 20:00 &nbsp;<br>
-									Вс: 8:30 — 18:00 (без перерывов и выходных) <br>
-									<a
+									<b>Часы работы:</b><br>
+									Ежедневно: 9:00-18:00<br>
+									<!-- <a
 										href="#"
 										target="_blank"
 										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;"
 									>
 									<font color="blue">Записаться на тест-драйв »</font>
-									</a>
+									</a> -->
 								</p>
 							</div>
 
