upd moskvich site

--- a/pages/cars/moskvich/index.html
+++ b/pages/cars/moskvich/index.html
@@ -10,7 +10,7 @@ permalink: '/cars/moskvich/'
 								<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12, строение 2.<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
 								<b>e-mail:&nbsp;</b><a href="mailto:2047sales@sam-auto.ru"><font color="blue">2047sales@sam-auto.ru</font></a>, <a href="mailto:2047afs@sam-auto.ru"><font color="blue">2047afs@sam-auto.ru</font></a><br>
-								<b>Сайт: </b><a href="https://moskvich-samara.ru/" target="_blank"><font color="blue">moskvich-samara.ru/</font></a><b> </b><br>
+								<b>Сайт: </b><a href="https://moskvich-samauto.ru/" target="_blank"><font color="blue">moskvich-samauto.ru/</font></a><b> </b><br>
 								<b>Часы работы: </b><br>Пн-Пт: 8:30 — 20:00 &nbsp;<br>
 								Сб-Вс: 8:30 — 18:00 <br>
 								<a
