--- a/pages/centers/south/index.html
+++ b/pages/centers/south/index.html
@@ -16,8 +16,8 @@ sub: true
 									<a href="mailto:2047afs@sam-auto.ru">
 									<font color="blue">2047afs@sam-auto.ru</font>
 									</a><br>
-									<b>Сайт: </b><a href="https://moskvich-samara.ru" target="_blank">
-									<font color="blue">moskvich-samara.ru</font>
+									<b>Сайт: </b><a href="https://moskvich-samauto.ru" target="_blank">
+									<font color="blue">moskvich-samauto.ru</font>
 									</a><b> </b><br>
 									<b>Часы работы:</b><br>
 									Пн-Пт: 8:30 — 20:00<br>
