change LR images

--- a/pages/cars/landrover/index.html
+++ b/pages/cars/landrover/index.html
@@ -5,7 +5,7 @@ permalink: '/cars/landrover/'
 ---
 							<h2>Автомобили Land Rover на Авроре</h2>
 
-							<img src="{{ 'img/banners/lr-ac.jpg' | relative_url }}" alt="Автомобили Land Rover в Самаре" class="mb-5 object-cover object-center">
+							<img src="{{ 'img/pages/centers/lr-build.jpg' | relative_url }}" alt="Автомобили Land Rover в Самаре" class="mb-5 object-cover object-center">
 							<p>
 								<b>Адрес:</b> 443045, г.Самара, ул. Авроры 150 Е<br>
 								<b>Телефон:</b> <a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
