--- a/pages/cars/jaguar/index.html
+++ b/pages/cars/jaguar/index.html
@@ -5,14 +5,14 @@ permalink: '/cars/jaguar/'
 ---
 							<h1>Автомобили Jaguar на Авроре</h1>
 
-							<img src="{{ 'img/banners/20141129_1.jpg' | relative_url }}" alt="Автомобили Jaguar в Самаре" class="mb-5 object-cover object-center">
+							<img src="{{ 'img/pages/centers/lr-build.jpg' | relative_url }}" alt="Автомобили Jaguar в Самаре" class="mb-5 object-cover object-center">
 							<p>
 								<b>Адрес:</b> 443045, г.Самара, ул. Авроры 150 Е<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
 								<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
 								<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a><br>
 								<b>Часы работы:</b><br>
-								Ежедневно 9:00-18:00
+								Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной
 							</p>
 
 							<h3>Схема проезда: </h3>
