--- a/pages/cars/landrover/index.html
+++ b/pages/cars/landrover/index.html
@@ -12,7 +12,7 @@ permalink: '/cars/landrover/'
 								<b>e-mail:</b> <a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
 								<b>Сайт:</b> <a href="http://www.landroversamara.ru" target="_blank"><font color="blue">www.landroversamara.ru</font></a><br>
 								<b>Часы работы:</b><br>
-								Ежедневно 9:00-18:00
+								Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной
 							</p>
 
 							<h3>Схема проезда: </h3>
