--- a/pages/carrepair/index.html
+++ b/pages/carrepair/index.html
@@ -5,18 +5,13 @@ permalink: '/carrepair/'
 ---
 						<h1>Кузовной ремонт</h1>
 
-						<img src="{{ 'img/pages/carrepair/3.png' | relative_url }}" alt="ALT" class="max-w-full mx-auto mb-6">
+						<p class="font-bold mb-8 text-center">Покрасочно-кузовной цех компании Самарские автомобили оснащен современным оборудованием и&nbsp;инструментами для выполнения работ по&nbsp;ремонту и&nbsp;восстановлению поврежденных кузовов автомобилей , с&nbsp;последующей их&nbsp;окраской по&nbsp;передовым технологиям ведущего мировогопроизводителя лако-красочных материалов концерна &laquo;AKZO NOBEL&raquo;, используемый продукт &laquo;SIKKENS&raquo;.</p>
 
-						<p class="font-bold mb-8 text-center">Покрасочно-кузовной цех компании Самарские автомобили  оснащен современным оборудованием и инструментами для выполнения работ по ремонту и восстановлению поврежденных кузовов автомобилей , с последующей их окраской по передовым технологиям ведущего мировогопроизводителя лако-красочных материалов концерна ”AKZO NOBEL”, используемый продукт ”SIKKENS”.</p>
+						<img src="{{ 'img/pages/carrepair/4.jpg' | relative_url }}" alt="ALT" class="max-w-full mx-auto mb-6">
 
-						<div class="flex flex-wrap items-start justify-center mb-6 gap-5">
-							<img src="{{ 'img/pages/carrepair/1.jpg' | relative_url }}" alt="ALT" class="max-w-full">
-							<img src="{{ 'img/pages/carrepair/2.jpg' | relative_url }}" alt="ALT" class="max-w-full">
-						</div>
-
-						<p>Сотрудники покрасочно-кузовного цеха проходят обучение в учебных центрах официальных представителей в России, а также в учебных центрах ”AKZO NOBEL” , ежегодно подтверждая свои знания на квалификационных экзаменах.</p>
-						<p>Тесно взаимодействуя со страховыми компаниями ”РЕНЕССАНС”, ”РОСГОССТРАХ”, ”ВСК”, ”ЮГОРИЯ”, ”СОГЛАСИЕ”, ”ОСК”, ”ИНГОССТРАХ” , мы сами проводим переговоры и согласования по сметам ремонтно-восстановительных работ и их оплате.</p>
-						<p>Приоритеты в нашей работе — это качество выполняемых работ и гарантийная ответственность за них.</p>
+						<p>Сотрудники покрасочно-кузовного цеха проходят обучение в&nbsp;учебных центрах официальных представителей в&nbsp;России, а&nbsp;также в&nbsp;учебных центрах &laquo;AKZO NOBEL&raquo; , ежегодно подтверждая свои знания на&nbsp;квалификационных экзаменах.</p>
+						<p>Тесно взаимодействуя со&nbsp;страховыми компаниями &laquo;РЕНЕССАНС&raquo;, &laquo;РОСГОССТРАХ&raquo;, &laquo;ВСК&raquo;, &laquo;ЮГОРИЯ&raquo;, &laquo;СОГЛАСИЕ&raquo;, &laquo;ОСК&raquo;, &laquo;ИНГОССТРАХ&raquo; , мы&nbsp;сами проводим переговоры и&nbsp;согласования по&nbsp;сметам ремонтно-восстановительных работ и&nbsp;их&nbsp;оплате.</p>
+						<p>Приоритеты в&nbsp;нашей работе&nbsp;&mdash; это качество выполняемых работ и&nbsp;гарантийная ответственность за&nbsp;них.</p>
 
 						<img src="{{ 'img/pages/carrepair/3.jpg' | relative_url }}" alt="ALT" class="max-w-full mb-5">
 
