--- a/pages/centers/aurora/index.html
+++ b/pages/centers/aurora/index.html
@@ -15,7 +15,7 @@ sub: true
 									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
 									<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a><br>
 									<b>Часы работы:</b><br>
-									Ежедневно: 9:00-18:00<br>
+									Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной<br>
 									<!-- <a
 										href="#"
 										target="_blank"
@@ -35,7 +35,7 @@ sub: true
 									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a>&nbsp; <br>
 									<b>Сайт: </b><a href="http://www.landroversamara.ru" target="_blank"><font color="blue">www.landroversamara.ru</font></a><br>
 									<b>Часы работы:</b><br>
-									Ежедневно: 9:00-18:00<br>
+									Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной<br>
 									<!-- <a
 										href="#"
 										target="_blank"
