--- a/pages/specials/index.html
+++ b/pages/specials/index.html
@@ -4,7 +4,7 @@ layout: default
 permalink: '/specials/'
 ---
 							<h1>Спецпредложения</h1>
-							<h3>Уважаемые клиенты!</h3>
+							<!-- <h3>Уважаемые клиенты!</h3>
 							<p>Предлагаем вам ознакомиться со специальными предложениями наших дилерских центров:</p>
 
 							<div class="flex flex-wrap items-stretch mb-5 gap-0 sm:gap-3 xl:gap-4 2xl:gap-5">
@@ -26,4 +26,4 @@ permalink: '/specials/'
 									<b class="sm:min-h-[48px]">Nissan Qashqai</b>
 								</a>
 
-							</div>
+							</div> -->
