move aurora center, rename INFINITI

--- a/public/pages/cars/infiniti/index.html
+++ b/public/pages/cars/infiniti/index.html
@@ -1,11 +1,11 @@
 ---
-title: "Автомобили Infiniti в Самаре | Продажа авто в Самаре, автоцентры и автосалоны Самары по продаже новых автомобилей"
+title: "Автомобили INFINITI в Самаре | Продажа авто в Самаре, автоцентры и автосалоны Самары по продаже новых автомобилей"
 layout: default
 permalink: '/cars/infiniti/'
 ---
-							<h1>Автомобили Infiniti на Южном шоссе</h1>
+							<h1>Официальный дилерский центр INFINITI</h1>
 
-							<!-- <img src="{{ 'img/banners/ac_m_infiniti.jpg' | relative_url }}" alt="Автомобили Infiniti в Самаре" class="mb-5 object-cover object-center"> -->
+							<!-- <img src="{{ 'img/banners/ac_m_infiniti.jpg' | relative_url }}" alt="Автомобили INFINITI в Самаре" class="mb-5 object-cover object-center"> -->
 							<p>
 								<b>Адрес:</b> 443085, Самара, Южное шоссе, 12А, строение 1, напротив ТК «Амбар»<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
@@ -28,8 +28,8 @@ permalink: '/cars/infiniti/'
 								<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abcc417e84cb6ccd3b8916ddef366adc653407c58afa4aaf101f736f18d02d542&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 							</div>
 
-							<h3>Автомобили Infiniti в Самаре</h3>
-							<p>Автомобильный центр Инфинити в Самаре открывает широкие возможности для приобретения официальных моделей авто мирового класса. Среди наиболее популярных услуг, оказываемых салоном, стоит отметить:</p>
+							<h3>Автомобили INFINITI в Самаре</h3>
+							<p>Автомобильный центр INFINITI в Самаре открывает широкие возможности для приобретения официальных моделей авто мирового класса. Среди наиболее популярных услуг, оказываемых салоном, стоит отметить:</p>
 							<ul>
 								<li>реализация новых автомобилей;</li>
 								<li>предпродажная подготовка транспортных средств;</li>
@@ -37,7 +37,7 @@ permalink: '/cars/infiniti/'
 								<li>содействие в оформлении документов под лизинг;</li>
 								<li>все услуги, связанные со страхованием автомобильного транспорта;</li>
 								<li>пробные разовые поездки автомобилях различных моделей и комплектаций на (тест-драйв с выездом за территорию автомобильного центра);</li>
-								<li>качественный сервис и оригинальные запасные части на Infiniti (Самара);</li>
+								<li>качественный сервис и оригинальные запасные части на INFINITI (Самара);</li>
 								<li>ремонт кузовов любого уровня сложности;</li>
 								<li>аксессуары и установка дополнительного оборудования с гарантией.</li>
 							</ul>
