--- a/public/pages/cars/nissan/index.html
+++ b/public/pages/cars/nissan/index.html
@@ -3,9 +3,9 @@ title: "Автомобили Nissan в Самаре | Продажа авто в
 layout: default
 permalink: '/cars/nissan/'
 ---
-							<h1>Автомобили Nissan на Южном шоссе</h1>
+							<h1>Официальный дилерский центр Nissan</h1>
 
-							<img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Nissan в Самаре" class="mb-5 object-cover object-center">
+							<!-- <img src="{{ 'img/banners/nissanugfasad.jpg' | relative_url }}" alt="Автомобили Nissan в Самаре" class="mb-5 object-cover object-center"> -->
 							<p>
 								<b>Адрес:&nbsp;</b>443085, Самара, Южное шоссе, 12А, строение 1, напротив ТК «Амбар»<br>
 								<b>Телефон:&nbsp;</b><a href="tel:+78469936600">+7 (846) 993-66-00</a><br>
