--- a/public/pages/centers/south/index.html
+++ b/public/pages/centers/south/index.html
@@ -6,6 +6,46 @@ sub: true
 ---
 							<h1>Автоцентры на Южном шоссе</h1>
 
+							<h3>Автоцентр Jaguar</h3>
+							<div class="flex flex-wrap items-start mb-5">
+								<!-- <img src="{{ 'img/pages/centers/jaga.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
+								<p>
+									<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br>
+									<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
+									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a><br>
+									<b>Сайт: </b><a href="http://www.jaguarsamara.ru/" target="_blank"><font color="blue">www.jaguarsamara.ru</font></a><br>
+									<b>Часы работы:</b><br>
+									Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной<br>
+									<!-- <a
+										href="#"
+										target="_blank"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'jaguar'; $store.state.isModalOpen = true;"
+									>
+									<font color="blue">Записаться на тест-драйв »</font>
+									</a> -->
+								</p>
+							</div>
+
+							<h3>Автоцентр Land Rover</h3>
+							<div class="flex flex-wrap items-start mb-5">
+								<!-- <img src="{{ 'img/pages/centers/lr.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
+								<p>
+									<b>Адрес:</b> 443085, г. Самара, Южное шоссе, 12А, строение 1 <br>
+									<b>Телефон:&nbsp;</b><a href="tel:+78462073377">+7 (846) 207-33-77</a><br>
+									<b>e-mail: </b><a href="mailto:sales@jlrsamara.ru"><font color="blue">sales@jlrsamara.ru</font></a>&nbsp; <br>
+									<b>Сайт: </b><a href="http://www.landroversamara.ru" target="_blank"><font color="blue">www.landroversamara.ru</font></a><br>
+									<b>Часы работы:</b><br>
+									Пн-Пт с 8:30 до 20:00, Сб-Вс с 8:30 до 18:00, Вс - сервис - выходной<br>
+									<!-- <a
+										href="#"
+										target="_blank"
+										@click.prevent="$refs.modalTitle.innerText='Записаться на тест-драйв'; $refs.brand.value = 'landrover'; $store.state.isModalOpen = true;"
+									>
+									<font color="blue">Записаться на тест-драйв »</font>
+									</a> -->
+								</p>
+							</div>
+
 							<h3>Автоцентр Москвич</h3>
 							<div class="flex flex-wrap items-start mb-5">
 								<!-- <img src="{{ 'img/pages/centers/nissanugfasad2.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
@@ -32,7 +72,7 @@ sub: true
 								</p>
 							</div>
 
-							<h3>Автоцентр Infiniti</h3>
+							<h3>Автоцентр INFINITI</h3>
 							<div class="flex flex-wrap items-start mb-5">
 								<!-- <img src="{{ 'img/pages/centers/ac_r1_infiniti.jpg' | relative_url }}" alt="ALT" class="mr-5 mb-5 object-cover object-center"> -->
 								<p>
