--- a/public/pages/credit/index.html
+++ b/public/pages/credit/index.html
@@ -7,7 +7,7 @@ permalink: '/credit/'
 							<p>Вы можете оформить автокредит на понравившийся Вам автомобиль в любом из автосалонов группы компаний «Самарские автомобили». Квалифицированные сотрудники наших кредитных отделов не только помогут вам выбрать наиболее выгодные условия, но и сопроводят Вас во время прохождения формальных процедур.</p>
 							<p>На ваш выбор будут представлены наиболее выгодные автокредиты любого банка, который выберите Вы. Кроме того, в автосалонах группы компаний представлены все специальные программы кредитования марок:</p>
 							<ul>
-								<li>Программа <a href="https://www.infinitisamara.ru/purchase/finance-specials/">Infiniti Finance</a>, позволяющая купить авто престижной японской марки в кредит на максимально выгодных условиях. Действуют специальные условия для клиентов, берущих «короткие» автокредиты.</li>
+								<li>Программа <a href="https://www.infinitisamara.ru/purchase/finance-specials/">INFINITI Finance</a>, позволяющая купить авто престижной японской марки в кредит на максимально выгодных условиях. Действуют специальные условия для клиентов, берущих «короткие» автокредиты.</li>
 								<li>Программа&nbsp;<a href="http://www.nissansamara.ru/nissan_finance/">Nissan Finance</a>. Отличительная черта кредитов этой организации – минимальные процентные ставки при покупке авто. Во многих случаях получить автокредит можно даже под 0% годовых.&nbsp;</li>
 								<li>Программа  <a href="http://www.landroversamara.ru/other-services/finance/#.VMIT7NKsV8E">Land Rover Finance</a>&nbsp; представляет собой комплекс финансовых услуг, которые носят эксклюзивный характер и доступны только клиентам Land Rover.</li>
 							</ul>
