--- a/public/pages/spo_serv/index.html
+++ b/public/pages/spo_serv/index.html
@@ -22,8 +22,8 @@ permalink: '/spo_serv/'
 		<b class="">Для владельцев Nissan</b>
 	</a>
 	<a href="https://infinitisamara.ru/owners/service-specials/" class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline" target="_blank">
-		<img src="{{ 'img/pages/spo_serv/infiniti.webp' | relative_url }}" alt="Для владельцев Infiniti" class="mb-2 w-full">
-		<b class="">Для владельцев Infiniti</b>
+		<img src="{{ 'img/pages/spo_serv/infiniti.webp' | relative_url }}" alt="Для владельцев INFINITI" class="mb-2 w-full">
+		<b class="">Для владельцев INFINITI</b>
 	</a>
 	<a href="https://moskvich-samauto.ru/owners/accessories/" class="text-gray-800 flex flex-col items-center text-center underline hover:no-underline" target="_blank">
 		<img src="{{ 'img/pages/spo_serv/moskvich.webp' | relative_url }}" alt="Для владельцев Москвич" class="mb-2 w-full">
