--- a/public/pages/specials/index.html
+++ b/public/pages/specials/index.html
@@ -3,27 +3,31 @@ title: "Спецпредложения | Продажа авто в Самаре
 layout: default
 permalink: '/specials/'
 ---
-							<h1>Спецпредложения</h1>
-							<!-- <h3>Уважаемые клиенты!</h3>
-							<p>Предлагаем вам ознакомиться со специальными предложениями наших дилерских центров:</p>
+<h1>Спецпредложения</h1>
+<!--
+<h3>Уважаемые клиенты!</h3>
+<p>Предлагаем вам ознакомиться со специальными предложениями наших дилерских центров:</p>
+-->
 
-							<div class="flex flex-wrap items-stretch mb-5 gap-0 sm:gap-3 xl:gap-4 2xl:gap-5">
+<div class="flex flex-wrap items-stretch mb-5 gap-0 sm:gap-3 xl:gap-4 2xl:gap-5">
 
-								<a href="https://nissansamara.ru/models/terrano/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/specials/1.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
-									<b class="sm:min-h-[48px]">Nissan Terrano</b>
-								</a>
-								<a href="https://nissansamara.ru/models/murano/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/specials/2.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
-									<b class="sm:min-h-[48px]">Nissan Murano</b>
-								</a>
-								<a href="https://nissansamara.ru/models/x-trail/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/specials/3.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
-									<b class="sm:min-h-[48px]">Nissan X-Trail</b>
-								</a>
-								<a href="https://nissansamara.ru/models/qashqai/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
-									<img src="{{ 'img/pages/specials/4.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
-									<b class="sm:min-h-[48px]">Nissan Qashqai</b>
-								</a>
+	<a href="https://moskvich-samauto.ru/customers/promotions/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
+		<img src="{{ 'img/pages/specials/moskvich-promotion.webp' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
+		<b class="sm:min-h-[48px]">Для покупателей Москвич</b>
+	</a>
+	<!--
+	<a href="https://nissansamara.ru/models/murano/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
+		<img src="{{ 'img/pages/specials/2.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
+		<b class="sm:min-h-[48px]">Nissan Murano</b>
+	</a>
+	<a href="https://nissansamara.ru/models/x-trail/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
+		<img src="{{ 'img/pages/specials/3.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
+		<b class="sm:min-h-[48px]">Nissan X-Trail</b>
+	</a>
+	<a href="https://nissansamara.ru/models/qashqai/" class="text-gray-800 flex flex-col items-center text-center mb-3 sm:mb-0 w-full sm:w-[48%] xl:w-[23%] underline hover:no-underline" target="_blank">
+		<img src="{{ 'img/pages/specials/4.jpg' | relative_url }}" alt="ALT" class="mb-2 flex-grow">
+		<b class="sm:min-h-[48px]">Nissan Qashqai</b>
+	</a>
+	 -->
 
-							</div> -->
+</div>
